# WhiteboardingApp

./: README.md
backend/: .gitignore  pyproject.toml  serverless.yml
backend/tests/: test_backend.py
backend/whiteboarding/: connection.py  default.py  main.py  on_message.py
frontend/: package.json
frontend/src/: app.js  coordinateSystem.js  drawImage.js  index.js  interactionStateMachine.js  makePassiveEventOption.js
