[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["David De <daviddecoding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
websockets = "^10.3"
strawberry-graphql = {extras = ["fastapi"], version = "^0.111.1"}
boto3 = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
